[project]
name = "refrig_only"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "naoto120424", email = "naotonaka0424@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
