[project]
name = "refrig_only"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "naoto120424", email = "naotonaka0424@gmail.com"},
]
dependencies = [
    "pytorch>=1.0.2",
    "torch>=2.2.1",
    "pytorch-lightning>=2.2.0.post0",
    "mlflow>=2.11.0",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
